<resources>
    <string name="app_name">Summarization</string>
    <string name="image_details">Image Details</string>

    <string name="select_img_cation">Click or Select an image to quickly extract the text from the image.</string>
    <string name="ocr">OCR</string>
    <string name="ocr_caption">Instant conversion of text with OCR, don\'t worry about typing anymore!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="no_text_found">No text found in the image.</string>
    <string name="task_cancelled">Task Cancelled</string>
</resources>