<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloOffGrey"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/iv_ocr_img"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="@dimen/dimen_400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_ocr"/>

    <com.example.summarization.typeface.TextViewHelveticaBold
        android:id="@+id/tv_ocr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocr"
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/colorGrey"
        app:layout_constraintTop_toBottomOf="@id/iv_ocr_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.summarization.typeface.TextViewHelveticaMedium
        android:id="@+id/tv_ocr_caption"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/ocr_caption"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/colorGrey"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_ocr"
        app:layout_constraintStart_toStartOf="@id/iv_ocr_img"
        app:layout_constraintEnd_toEndOf="@id/iv_ocr_img"/>

    <com.example.summarization.typeface.TextViewHelveticaMedium
        android:id="@+id/ll_next"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:background="@drawable/color_filled_cornered_edge"
        android:padding="@dimen/dimen_11dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toTopOf="@id/ll_skip"
        app:layout_constraintStart_toStartOf="@id/tv_ocr_caption"
        app:layout_constraintEnd_toEndOf="@id/tv_ocr_caption"/>

    <com.example.summarization.typeface.TextViewHelveticaMedium
        android:id="@+id/ll_skip"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/colorGrey"
        android:padding="@dimen/dimen_11dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="@id/ll_next"
        app:layout_constraintEnd_toEndOf="@id/ll_next"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>