<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/coloOffGrey">

    <ImageView
        android:visibility="gone"
        android:id="@+id/imgView"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_220dp"
        android:contentDescription="@string/app_name" />

    <com.example.summarization.typeface.TextViewHelveticaBold
        android:visibility="gone"
        android:id="@+id/tv_imgdetails"
        android:text="@string/image_details"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/font_18sp"
        android:layout_width="@dimen/dimen_0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgView"
        app:layout_constraintStart_toStartOf="@id/imgView"
        app:layout_constraintEnd_toEndOf="@id/imgView"/>

    <ScrollView
        android:visibility="gone"
        android:id="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/tv_imgdetails"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:background="@color/colorWhite">

        <com.example.summarization.typeface.TextViewHelveticaMedium
            android:id="@+id/tvText"
            android:textSize="@dimen/font_15sp"
            android:padding="@dimen/dimen_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

        <LinearLayout
            android:id="@+id/ll_empty_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="@dimen/dimen_0dp"
            android:orientation="vertical">

        <ImageView
            android:src="@drawable/image_icon"
            android:layout_gravity="center"
            android:id="@+id/iv_placeholder"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_150dp"
            android:contentDescription="@string/app_name" />

        <com.example.summarization.typeface.TextViewHelveticaMedium
            android:id="@+id/tv_placeholdercaption"
            android:text="@string/select_img_cation"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/font_14sp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/rl_selectImg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/circle_filled"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:src="@drawable/icon_plus"/>
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_1dp"
        app:layout_constraintTop_toTopOf="@id/rl_selectImg"
        app:layout_constraintBottom_toBottomOf="@id/rl_selectImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>